--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,104 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(244, 244, 244);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+}
+
+.app {
+  max-width: 700px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.btn__answer {
+  width: 200px;
+  height: 40px;
+  font-size: 20px;
+  margin-bottom: 20px;
+  background-color:#fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.question__text {
+  text-align: center;
+  font-size: 30px;
+}
+
+.question__title {
+  text-align: center;
+}
+
+.question__end {
+  display: block;
+  text-align: center;
+  font-size: 60px;
+  margin-top: 50px;
+}
+
+.question__score {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-size: 20px;
+  margin: 15px 0;
+}
+
+.question__info {
+  background-color:#fff;
+  padding: 15px;
+  margin-bottom: 40px;
+  border-radius: 15px;
+  box-shadow: 0px 0px 11px 0px rgba(34, 60, 80, 0.2);
+}
+
+.question__answers {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+}
+
+.app__inner {
+  margin-top: 100px;
+}
+
+.app__btn {
+  margin-left: 75px;
+  margin-top: 30px;
+}
+
+.app__btn-item {
+  margin: 0 20px;
+  width: 100px;
+  height: 30px;
+  background-color: rgb(241, 241, 241);
+  color: #000;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.app__btn-item:first-child {
+  margin: 0;
+}
+
+.question__restart {
+  text-align: center;
+}
+
+.question__restart-item {
+  width: 300px;
+  height: 50px;
+  font-size: 30px;
+  margin-top: 30px;
+  background-color: rgb(241, 241, 241);
+  cursor: pointer;
 }
